@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-06-05:
+
+- Fixed a bug in command completion: when a shell built-in or defined function
+  was preceded in alphabetical order by an undefined function (on FPATH or
+  after 'autoload'), the built-in or defined function failed to tab-complete.
+
 2023-06-04:
 
 - Fixed a bug in 'case', introduced in ksh 93t 2008-10-31, where extended
